OpenVi 7.0.9 -> OpenVi 7.0.10-dev (Unreleased): Wed Feb 2 02:57:19 2022
        + Reword "Already in the first column" to "Already at the first
          column" to be consistent with the other movement error messages.
        + Remove documentation files not explicitly under the 3-BSD license
        + Update header comment of all modified files
        + Reformat the ChangeLog to break lines at 76 columns
        + New feature: `set bserase` (abbrev `bse`) which causes
          backspaced characters to be immediately erased from the screen
        + Convert tabs to spaces and adjust source indentation with `cppi`
        + Update docs; Markdown-ify `LICENSE` and rename to `LICENSE.md`

OpenVi 7.0.8 -> OpenVi 7.0.9: Mon Jan 31 21:43:08 2022
        + Add a missing include to fix compilation on Void with musl libc
        + Update `README.md`

OpenVi 7.0.7 -> OpenVi 7.0.8: Mon Jan 31 10:12:53 2022
        + Rework `README.md`
        + Drop `-pipe` and `-fomit-frame-pointer` for wider compatibility
        + Add support for building on macOS; tested on 12.1/x86_64/21C5021h
        + Add support for building on OpenBSD; tested on 7.0-current/ARM64
        + Normalize licensing, acknowledgements, and copyright statements
        + Normalize macros and conditional if/ifdef/ifndef's with `cppi`
        + Add support for building on FreeBSD; tested on 13.0-REL-p6/ARM64
        + Minor code clean-up
        + Drop memmove wrapper (for old systems with bcopy but no memmove)
        + Add support for building with musl libc
        + Add `imctrl` and `imkey` options, inspired by `cannactrl` and
          `fepkey` options in `nvi-m17n` by itojun. If `imctrl` option is
          set, the input method is controlled by using escape sequences
          compatible with Tera Term and RLogin. The state of the input
          method in commands specified by imkey option is saved and restored
          automatically. This input method is deactivated upon returning to